tests/machine/x/rust/query_sum_select.error
exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/query_sum_select.rs:13:17
   |
13 |     _print_list(&result);
   |     ----------- ^^^^^^^ expected `&[_]`, found `&{integer}`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected reference `&[_]`
              found reference `&{integer}`
note: function defined here
  --> /workspace/mochi/tests/machine/x/rust/query_sum_select.rs:2:4
   |
2  | fn _print_list<T: std::fmt::Debug>(v: &[T]) {
   |    ^^^^^^^^^^^                     -------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
