tests/machine/x/rust/query_sum_select.rs
// Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z
fn _print_list<T: std::fmt::Debug>(v: &[T]) {
    for (i, it) in v.iter().enumerate() {
        if i > 0 { print!(" "); }
        print!("{:?}", it);
    }
    println!();
}

fn main() {
    let nums = vec![1, 2, 3];
    let result = { let mut tmp1 = 0;for &n in &nums { if !(n > 1) { continue; } tmp1 += n; } tmp1 };
    _print_list(&result);
}
